[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/protatape/StearingAiVersion/Plane1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/protatape/StearingAiVersion/PathfollowBath2.gd" type="Script" id=2]

[node name="PathfollowBath2" type="Node2D"]
script = ExtResource( 2 )

[node name="LineBath" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PathBath" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="DrawBath" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Plane" parent="." instance=ExtResource( 1 )]
position = Vector2( 511, 362 )

[connection signal="path_established" from="Plane" to="." method="_on_Plane_path_established"]
